@@ -1,3 +1,6 @@
+* Wed Feb 24 2021 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.4-0
+- Refactor `list_puppet_params` to avoid excessive looping
+
 * Mon Nov 02 2020 Andy Adrian <andy.adrian@onyxpoint.com> - 3.1.4-0
 - Remove unused and broken telemetry functionality
 - Updated the REFERENCE.md
